cockroachlabs-preview-main/docs/v23.2/float.mdx
---
title: "FLOAT"
old_description: "The FLOAT data type stores inexact, floating-point numbers with up to 17 digits in total and at least one digit to the right of the decimal point."
---

CockroachDB supports various inexact, floating-point number [data types](/docs/v23.2/data-types) with up to 17 digits of decimal precision.

They are handled internally using the [standard double-precision (64-bit binary-encoded) IEEE754 format](https://wikipedia.org/wiki/IEEE_floating_point).

## Names and Aliases

<table><thead><tr><th>Name</th><th>Aliases</th></tr></thead><tbody><tr><td><code>FLOAT</code></td><td>None</td></tr><tr><td><code>REAL</code></td><td><code>FLOAT4</code></td></tr><tr><td><code>DOUBLE PRECISION</code></td><td><code>FLOAT8</code></td></tr></tbody></table>

## Syntax

A constant value of type `FLOAT` can be entered as a [numeric literal](/docs/v23.2/sql-constants#numeric-literals). For example: `1.414` or `-1234`.

The special IEEE754 values for positive infinity, negative infinity and [NaN (Not-a-Number)](https://wikipedia.org/wiki/NaN) cannot be entered using numeric literals directly and must be converted using an [interpreted literal](/docs/v23.2/sql-constants#interpreted-literals) or an [explicit conversion](/docs/v23.2/scalar-expressions#explicit-type-coercions) from a string literal instead.

The following values are recognized:

<table><thead><tr><th>Syntax</th><th>Value</th></tr></thead><tbody><tr><td><code>inf</code>, <code>infinity</code>, <code>+inf</code>, <code>+infinity</code></td><td>+∞</td></tr><tr><td><code>-inf</code>, <code>-infinity</code></td><td>-∞</td></tr><tr><td><code>nan</code></td><td><a href="https://wikipedia.org/wiki/NaN">NaN (Not-a-Number)</a></td></tr></tbody></table>

For example:

- `FLOAT '+Inf'`
- `'-Inf'::FLOAT`
- `CAST('NaN' AS FLOAT)`

## Size

A `FLOAT` column supports values up to 8 bytes in width, but the total storage size is likely to be larger due to CockroachDB metadata.

## Examples

```sql
> CREATE TABLE floats (a FLOAT PRIMARY KEY, b REAL, c DOUBLE PRECISION);
```

```sql
> SHOW COLUMNS FROM floats;
```

```text
  column_name | data_type | is_nullable | column_default | generation_expression |  indices  | is_hidden
--------------+-----------+-------------+----------------+-----------------------+-----------+------------
  a           | FLOAT8    |    false    | NULL           |                       | {primary} |   false
  b           | FLOAT4    |    true     | NULL           |                       | {primary} |   false
  c           | FLOAT8    |    true     | NULL           |                       | {primary} |   false
(3 rows)
```

```sql
> INSERT INTO floats VALUES (1.012345678901, 2.01234567890123456789, CAST('+Inf' AS FLOAT));
```

```sql
> SELECT * FROM floats;
```

```text
+----------------+--------------------+------+
|       a        |         b          |  c   |
+----------------+--------------------+------+
| 1.012345678901 | 2.0123456789012346 | +Inf |
+----------------+--------------------+------+
(1 row)
# Note that the value in "b" has been limited to 17 digits.
```

## Supported casting and conversion

`FLOAT` values can be [cast](/docs/v23.2/data-types#data-type-conversions-and-casts) to any of the following data types:

<table><thead><tr><th>Type</th><th>Details</th></tr></thead><tbody><tr><td><code>INT</code></td><td>Truncates decimal precision and requires values to be between -2^63 and 2^63-1</td></tr><tr><td><code>DECIMAL</code></td><td>Causes an error to be reported if the value is NaN or +/- Inf.</td></tr><tr><td><code>BOOL</code></td><td><strong>0</strong> converts to <code>false</code>; all other values convert to <code>true</code></td></tr><tr><td><code>STRING</code></td><td>--</td></tr></tbody></table>

## See also

[Data Types](/docs/v23.2/data-types)
