cockroachlabs-preview-main/docs/v24.1/float.mdx
---
title: "FLOAT"
old_description: "The FLOAT data type stores inexact, floating-point numbers with up to 17 digits in total and at least one digit to the right of the decimal point."
---

CockroachDB supports various inexact, floating-point number [data types](/docs/v24.1/data-types) with up to 17 digits of decimal precision.

They are handled internally using the [standard double-precision (64-bit binary-encoded) IEEE754 format](https://wikipedia.org/wiki/IEEE_floating_point).

## Names and Aliases

<table><thead><tr><th>Name</th><th>Aliases</th></tr></thead><tbody><tr><td><code>FLOAT</code></td><td>None</td></tr><tr><td><code>REAL</code></td><td><code>FLOAT4</code></td></tr><tr><td><code>DOUBLE PRECISION</code></td><td><code>FLOAT8</code></td></tr></tbody></table>

## Syntax

A constant value of type `FLOAT` can be entered as a [numeric literal](/docs/v24.1/sql-constants#numeric-literals). For example: `1.414` or `-1234`.

The special IEEE754 values for positive infinity, negative infinity and [NaN (Not-a-Number)](https://wikipedia.org/wiki/NaN) cannot be entered using numeric literals directly and must be converted using an [interpreted literal](/docs/v24.1/sql-constants#interpreted-literals) or an [explicit conversion](/docs/v24.1/scalar-expressions#explicit-type-coercions) from a string literal instead.

The following values are recognized:

<table><thead><tr><th>Syntax</th><th>Value</th></tr></thead><tbody><tr><td><code>inf</code>, <code>infinity</code>, <code>+inf</code>, <code>+infinity</code></td><td>+∞</td></tr><tr><td><code>-inf</code>, <code>-infinity</code></td><td>-∞</td></tr><tr><td><code>nan</code></td><td><a href="https://wikipedia.org/wiki/NaN">NaN (Not-a-Number)</a></td></tr></tbody></table>

For example:

- `FLOAT '+Inf'`
- `'-Inf'::FLOAT`
- `CAST('NaN' AS FLOAT)`

## Size

A `FLOAT` column supports values up to 8 bytes in width, but the total storage size is likely to be larger due to CockroachDB metadata.

## Examples

```sql
> CREATE TABLE floats (a FLOAT PRIMARY KEY, b REAL, c DOUBLE PRECISION);
```

```sql
> SHOW COLUMNS FROM floats;
```

```text
  column_name | data_type | is_nullable | column_default | generation_expression |  indices  | is_hidden
--------------+-----------+-------------+----------------+-----------------------+-----------+------------
  a           | FLOAT8    |    false    | NULL           |                       | {primary} |   false
  b           | FLOAT4    |    true     | NULL           |                       | {primary} |   false
  c           | FLOAT8    |    true     | NULL           |                       | {primary} |   false
(3 rows)
```

```sql
> INSERT INTO floats VALUES (1.012345678901, 2.01234567890123456789, CAST('+Inf' AS FLOAT));
```

```sql
> SELECT * FROM floats;
```

```text
+----------------+--------------------+------+
|       a        |         b          |  c   |
+----------------+--------------------+------+
| 1.012345678901 | 2.0123456789012346 | +Inf |
+----------------+--------------------+------+
(1 row)
# Note that the value in "b" has been limited to 17 digits.
```

## Supported casting and conversion

`FLOAT` values can be [cast](/docs/v24.1/data-types#data-type-conversions-and-casts) to any of the following data types:

<table><thead><tr><th>Type</th><th>Details</th></tr></thead><tbody><tr><td><code>INT</code></td><td>Rounds the float to the nearest integer. If equidistant to two integers, rounds to the even integer. See <a href="#cast-float-to-int">Cast <code>FLOAT</code> to <code>INT</code></a>.</td></tr><tr><td><code>DECIMAL</code></td><td>Causes an error to be reported if the value is NaN or +/- Inf.</td></tr><tr><td><code>BOOL</code></td><td><strong>0</strong> converts to <code>false</code>; any other value converts to <code>true</code>.</td></tr><tr><td><code>STRING</code></td><td>--</td></tr></tbody></table>

### Cast `FLOAT` to `INT`

If you cast a float to an integer, it is rounded to the nearest integer. If it is equidistant to two integers, it is rounded to the even integer.

For example:

```sql
SELECT f::INT FROM (VALUES (-1.5::FLOAT), (-0.5::FLOAT), (0.5::FLOAT), (1.5::FLOAT)) v(f);
```

```text
  f
------
  -2
   0
   0
   2
```

## See also

[Data Types](/docs/v24.1/data-types)
